--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+1.0.4dev (unreleased)
+=====================
+
+- pep8/pylint cleanup, reorganize imports (jcerjak)
+
 1.0.3 (2010-07-02)
 ==================
 
@@ -54,4 +59,3 @@ Internal
 ================
 
 - Initial release.
-
